piUDwqw2: FIX - input placeholder alignment
* Fix incorrect placeholder alignment in
  - New Personal Wallet view
  - Create Shared Wallet view
  - Joined Share Wallet view
* Likely fix input alignment in other views as well

--- a/src/sass/views/tab-settings.scss
+++ b/src/sass/views/tab-settings.scss
@@ -74,6 +74,9 @@
       font-size: 12px;
       font-weight: bold;
     }
+    input {
+      line-height: normal;
+    }
   }
  .settings-list {
     .item {
